[package]
name = "Backend"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1", features = ["full", "rt-multi-thread", "sync"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
actix-web-actors = "4.3.1"

anyhow = "1.0.98"
tonic = "0.13.1"
actix-ws = "0.3.0"
futures-util = "0.3.31"
uuid = { version = "1.19.0", features = ["v5"] }
jsonwebtoken = "9.3.1"
once_cell = "1.21.3"
futures-executor = "0.3.31"
urlencoding = "2.1.3"
chrono = "0.4.42"


